--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "framer-motion": "^4.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-tooltip": "^5.5.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
